Booleans and textures with UV coordinate #59304

Closed
opened 2018-12-13 11:18:33 +01:00 by Lubomir Cenovsky · 22 comments

System Information
Operating system: Ubuntu 16.04 LTS
Graphics card: NVidia GTS 680

Blender Version
Broken: 2.80, 81ea815dcb, 2018-12-12

Short description of error
When I use boolean meshes without UV texture coordinates on mesh, which have UV texture maped on it, then texture will not apear on textured object.

Exact steps for others to reproduce the error
I add Monkey with option Generate UVs select
Use some texture with UV texture coordinate on the Monkey
Then I add for example Cube. Make sure this Cube doesnt have UV texture coordinates created.
When I add boolean modifier on the Monkey, and I use the Cube, texture disapear. From all views. When I togle Boolean modifier, texture will apear again.boolean_and_uv_textures.blend

**System Information** Operating system: Ubuntu 16.04 LTS Graphics card: NVidia GTS 680 **Blender Version** Broken: 2.80, 81ea815dcb6, 2018-12-12 **Short description of error** When I use boolean meshes without UV texture coordinates on mesh, which have UV texture maped on it, then texture will not apear on textured object. **Exact steps for others to reproduce the error** I add Monkey with option Generate UVs select Use some texture with UV texture coordinate on the Monkey Then I add for example Cube. Make sure this Cube doesnt have UV texture coordinates created. When I add boolean modifier on the Monkey, and I use the Cube, texture disapear. From all views. When I togle Boolean modifier, texture will apear again.[boolean_and_uv_textures.blend](https://archive.blender.org/developer/F5940240/boolean_and_uv_textures.blend)

Added subscriber: @LubomirCenovsky

Added subscriber: @LubomirCenovsky

#62186 was marked as duplicate of this issue

#62186 was marked as duplicate of this issue

#60552 was marked as duplicate of this issue

#60552 was marked as duplicate of this issue

#57173 was marked as duplicate of this issue

#57173 was marked as duplicate of this issue

#60600 was marked as duplicate of this issue

#60600 was marked as duplicate of this issue

#60272 was marked as duplicate of this issue

#60272 was marked as duplicate of this issue

#60076 was marked as duplicate of this issue

#60076 was marked as duplicate of this issue

#59380 was marked as duplicate of this issue

#59380 was marked as duplicate of this issue
Member

Added subscribers: @ideasman42, @JacquesLucke

Added subscribers: @ideasman42, @JacquesLucke
Member

I'm not sure if this is a bug or a known limitation. Did it work in older versions of Blender?

I'm not sure if this is a bug or a known limitation. Did it work in older versions of Blender?

In 2.79 it works. I found this out by opening project from 2.79 where everything works and in 2.8 it doesnt.

In 2.79 it works. I found this out by opening project from 2.79 where everything works and in 2.8 it doesnt.

Added subscriber: @dipnoan-4

Added subscriber: @dipnoan-4

Added subscriber: @janibroo

Added subscriber: @janibroo
Campbell Barton was assigned by Sebastian Parborg 2019-01-02 18:06:43 +01:00

Added subscriber: @RichardKennaway

Added subscriber: @RichardKennaway

Added subscribers: @Ponlets, @WilliamReynish

Added subscribers: @Ponlets, @WilliamReynish
Member

Added subscribers: @iulian.flester, @lichtwerk

Added subscribers: @iulian.flester, @lichtwerk
Member

Added subscribers: @AdamEarle, @Darksunrise, @AdamPreisler

Added subscribers: @AdamEarle, @Darksunrise, @AdamPreisler

Added subscriber: @capnm

Added subscriber: @capnm
Added subscribers: @Tober-1, @Sergey, @ZedDB, @billyand, @nt_brasil, @RobertWesseling, @StephenLeger

Added subscriber: @HenriqueGonzaga

Added subscriber: @HenriqueGonzaga

This issue was referenced by a749d7d8fa

This issue was referenced by a749d7d8facdf8b49cef25ee6fd1a3ecea9b09b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59304
No description provided.