Fix T59304: boolean modifier does not preserve UV textures.

In the old derivedmesh function it was merging customdata layers, added
that back for mesh conversion too.